--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,19 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do_list</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1><%= KindofDay %></h1>
-    <ul>
-        <% for (let i=0 ; i<newListitems ; i++) {%>
-            <li><%= newListitems[i] %></li>
+    <div class="box" id="heading"><h1><%= kindOfDay %></h1></div>
+    
+    <div class="box">
+        <% for (let i=0 ; i<newListItems.length ; i++) {%>
+            <div class="item">
+            <input type="checkbox">
+            <p><%= newListItems[i] %></p>
+            </div>
         <% } %> 
-    </ul>
-    <form action="/" , method="post">
-        <input type="text" name="newItem">
-        <button type="submit" name="button">Add</button>
-    </form>
+        <form action="/" , method="post", class="item">
+            <input type="text" name="newItem" placeholder="New Item">
+            <button type="submit" name="button">+</button>
+        </form>
+    </div>  
+    
     
 </body>
 </html>
